# Modern-C23-learn

./: .clang-format  .clangd  README.md
src/src-1/: CMakeLists.txt  modern_c.c  modern_c.md
src/src-2/: modern_c.c  modern_c.md
src/src-3/: modern_c.c  modern_c.md
src/src-4/: CMakeLists.txt  modern_c.c  modern_c.md
test/src-1/: CMakeLists.txt  test.c  test.h
